--- a/jqeryproject.html
+++ b/jqeryproject.html
@@ -8,7 +8,7 @@
     <style>
         body{
             /* background:linear-gradient(red ,blue ,green); */
-            background-image:linear-gradient(to right,rgb(74, 112, 82),#beb7b7,#723939);
+            background-image:linear-gradient(to top,rgb(75, 32, 231),#e6d6d6,#3e22db);
         }
         #imgman,#imgman2,#imgman4,#imgman6{
             /* direction: inherit; */
